--- a/planning.html
+++ b/planning.html
@@ -767,8 +767,9 @@
 
     try{
       const [py, pc] = await Promise.all([
-       jsonp(`${API}?view=planning_year&year=${YEAR}&callback=${cb1}${bust}`, cb1),
-       jsonp(`${API}?view=planning_categories&callback=${cb2}${bust}`, cb2)
+      jsonp(`${API}?view=planning_year&year=${YEAR}&nocache=1&callback=${cb1}`, cb1)
+      jsonp(`${API}?view=planning_categories&nocache=1&callback=${cb2}`, cb2)
+
       ]);
 
       if(py?.ok===false) throw new Error(py?.error || "planning_year invalide");
