--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body::before{
 
   <section class="grid" aria-label="Menu">
     <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/" target="_self"><img src="entretien.png" alt="Entretien"></a>
-    <a class="btn" href="construction.png"><img src="documents.png" alt="Documents"></a>
+    <a class="btn" href="documents.png"><img src="documents.png" alt="Documents"></a>
 
     <a class="btn" href="organigramme.html"><img src="organigramme.png" alt="Organigramme"></a>
     <a class="btn" href="construction.png"><img src="informations.png" alt="Informations"></a>
