--- a/documents.html
+++ b/documents.html
@@ -148,8 +148,7 @@
       line-height:1.1;
       margin:0;
       white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
+      overflow:visible;
     }
     .doc .meta{
       margin-top: 4px;
