--- a/documents.html
+++ b/documents.html
@@ -128,53 +128,81 @@
       padding-right: 2px;
     }
 
+    /* ✅ NOUVELLE CARTE PROPRE (2 lignes) */
     .doc{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:10px;
       padding: 12px 12px;
       border-radius: 18px;
       background: rgba(0,0,0,.22);
       border:1px solid rgba(255,255,255,.08);
       margin-bottom: 10px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
     }
-    .doc .left{
+
+    .doc-top{
       min-width:0;
     }
-    .doc .title{
+
+    .doc-title{
       font-weight:950;
       font-size: 17px;
-      line-height:1.1;
+      line-height:1.15;
       margin:0;
-      white-space:nowrap;
-      overflow:visible;
+
+      /* ✅ autorise 2 lignes (pas d'ellipsis forcé) */
+      white-space: normal;
+      overflow: hidden;
+
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
-    .doc .meta{
-      margin-top: 4px;
+
+    .doc-bottom{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      min-width:0;
+    }
+
+    .doc-meta{
       color: var(--muted);
-      font-weight:800;
+      font-weight:900;
       font-size: 12px;
       letter-spacing:.2px;
       text-transform: uppercase;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      min-width:0;
     }
-    .doc .actions{
-      display:flex; gap:8px;
-      flex: 0 0 auto;
+
+    .doc-actions{
+      display:flex;
+      gap:10px;
+      flex:0 0 auto;
     }
-    .mini{
-      padding: 10px 10px;
+
+    /* ✅ boutons icônes */
+    .iconbtn{
+      width: 44px;
+      height: 44px;
       border-radius: 14px;
-      font-weight:950;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
       border:1px solid rgba(255,255,255,.14);
       background: rgba(0,0,0,.18);
       color: var(--txt);
       cursor:pointer;
       -webkit-tap-highlight-color: transparent;
-      white-space:nowrap;
+      font-size: 18px;
+      font-weight: 900;
     }
-    .mini:active{transform: translateY(1px)}
-    .mini.primary{
+    .iconbtn:active{transform: translateY(1px)}
+    .iconbtn.primary{
       border-color: rgba(255,170,60,.35);
     }
 
@@ -215,6 +243,7 @@
 
     @media (max-width: 360px){
       .filters{grid-template-columns: 1fr;}
+      .iconbtn{ width: 42px; height: 42px; }
     }
   </style>
 </head>
@@ -371,13 +400,17 @@
       const row = document.createElement("div");
       row.className = "doc";
       row.innerHTML = `
-        <div class="left">
-          <div class="title">${escapeHtml(d.title)}</div>
-          <div class="meta">${escapeHtml(cat)}</div>
+        <div class="doc-top">
+          <div class="doc-title">${escapeHtml(d.title)}</div>
         </div>
-        <div class="actions">
-          <button class="mini primary" data-open="${escapeHtml(openUrl)}">Lire</button>
-          <button class="mini" data-dl="${escapeHtml(dlUrl)}">Télécharger</button>
+
+        <div class="doc-bottom">
+          <div class="doc-meta">${escapeHtml(cat)}</div>
+
+          <div class="doc-actions">
+            <button class="iconbtn primary" title="Lire" aria-label="Lire" data-open="${escapeHtml(openUrl)}">👁</button>
+            <button class="iconbtn" title="Télécharger" aria-label="Télécharger" data-dl="${escapeHtml(dlUrl)}">⬇</button>
+          </div>
         </div>
       `;
       $list.appendChild(row);
@@ -444,7 +477,6 @@
   (function(){
     fillCategories();
     if(!loadFromCache()){
-      // affiche “vide” direct, puis charge
       allDocs = [];
       categories = [];
       render();
