--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ body::before{
 
 /* Layout plein écran */
 .wrap{
-  position:fixed;
-  inset:0;
+  min-height:100vh;
+  width:100%;
   z-index:1;
   display:flex;
   flex-direction:column;
