--- a/index.html
+++ b/index.html
@@ -1,181 +1,166 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>CS Consenvoye</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<title>CS Consenvoye</title>
 
-  <!-- Icônes -->
-  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
-  <link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
+<link rel="manifest" href="manifest.json">
 
-  <!-- PWA -->
-  <meta name="theme-color" content="#d46a00">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#d46a00">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <style>
-    :root{
-      --maxw: 760px;
+<style>
+:root{
+  --maxw: 760px;
 
-      /* Boutons */
-      --btn: clamp(110px, min(26vw, 16vh), 190px);
+  /* 🔥 Titre plus dominant */
+  --titleMaxH: 34vh;
 
-      /* Espacement */
-      --gap: clamp(10px, min(3vw, 2vh), 18px);
-    }
+  /* 🔥 Icônes plus équilibrées */
+  --btn: clamp(85px, min(20vw, 13vh), 150px);
 
-    *{ box-sizing:border-box; }
-
-    html, body{
-      margin:0;
-      padding:0;
-      height:100%;
-      overflow:auto;                 /* ✅ pull-to-refresh possible */
-      overscroll-behavior-y: auto;   /* ✅ autorise le geste */
-      background:#000;
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      -webkit-text-size-adjust:100%;
-    }
-
-    /* ✅ Background fiable */
-    body{
-      background:#000 url("background.png") center top / cover no-repeat fixed;
-    }
-
-    /* Layout */
-    .wrap{
-      min-height:100vh;
-      min-height:100dvh;
-      width:100%;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
-    }
-
-    .titleBox{
-  margin-top: calc(env(safe-area-inset-top) + 10px);
-  width: min(94vw, 680px);
-  height: clamp(90px, 18vh, 160px); /* on NE change PAS */
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  overflow:visible;
+  --gap: clamp(10px, min(3vw, 2vh), 18px);
 }
 
+*{ box-sizing:border-box; }
+
+html, body{
+  margin:0;
+  padding:0;
+  height:100%;
+  overflow:auto;
+  overscroll-behavior-y:auto;
+  background:#000;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  -webkit-text-size-adjust:100%;
+}
+
+/* Background stable */
+body{
+  background:#000 url("background.png") center top / cover no-repeat fixed;
+}
+
+/* Layout */
+.wrap{
+  min-height:100vh;
+  min-height:100dvh;
+  width:100%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
+}
+
+/* Titre */
 .title{
-  width:135%;      /* 👈 augmente visuellement */
-  height:135%;     /* 👈 augmente visuellement */
+  margin-top: calc(env(safe-area-inset-top) + 10px);
+  width: min(94vw, 680px);
+  max-height: var(--titleMaxH);
+  height:auto;
   object-fit:contain;
   display:block;
   pointer-events:none;
   user-select:none;
 }
-    /* Grille */
-    .grid{
-      width: min(94vw, var(--maxw));
-      margin-top: clamp(8px, 1.5vh, 16px);
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: var(--gap);
-      justify-items:center;
-      align-content:start;
-    }
 
-    .btn{
-      width: var(--btn);
-      height: var(--btn);
-      display:block;
-      text-decoration:none;
-      -webkit-tap-highlight-color: transparent;
-    }
-    .btn img{
-      width:100%;
-      height:100%;
-      object-fit:contain;
-      display:block;
-    }
+/* Grille */
+.grid{
+  width: min(94vw, var(--maxw));
+  margin-top: clamp(8px, 1.5vh, 16px);
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--gap);
+  justify-items:center;
+  align-content:start;
+}
 
-    /* Tablettes */
-    @media (min-width: 768px){
-      :root{
-        --btn: clamp(140px, min(18vw, 18vh), 220px);
-        --maxw: 900px;
-      }
-    }
+.btn{
+  width: var(--btn);
+  height: var(--btn);
+  display:block;
+  text-decoration:none;
+  -webkit-tap-highlight-color:transparent;
+}
 
-    /* Ecrans bas */
-    @media (max-height: 700px){
-      :root{
-        --btn: clamp(95px, min(24vw, 15vh), 150px);
-      }
-      .titleBox{
-        height: clamp(80px, 18vh, 140px);
-      }
-    }
-  </style>
+.btn img{
+  width:100%;
+  height:100%;
+  object-fit:contain;
+  display:block;
+}
+
+/* Tablettes */
+@media (min-width:768px){
+  :root{
+    --btn: clamp(110px, 16vw, 180px);
+    --titleMaxH: 26vh;
+    --maxw:900px;
+  }
+}
+</style>
 </head>
 
 <body>
-  <main class="wrap">
+<main class="wrap">
 
-    <div class="titleBox">
-      <img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
-    </div>
+<img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
 
-    <section class="grid" aria-label="Menu">
-      <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/" target="_self">
-        <img src="entretien.png" alt="Entretien">
-      </a>
+<section class="grid">
 
-      <a class="btn" href="documents.html">
-        <img src="documents.png" alt="Documents">
-      </a>
+<a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/">
+<img src="entretien.png" alt="Entretien">
+</a>
 
-      <a class="btn" href="organigramme.html">
-        <img src="organigramme.png" alt="Organigramme">
-      </a>
+<a class="btn" href="documents.html">
+<img src="documents.png" alt="Documents">
+</a>
 
-      <a class="btn" href="construction.png">
-        <img src="informations.png" alt="Informations">
-      </a>
+<a class="btn" href="organigramme.html">
+<img src="organigramme.png" alt="Organigramme">
+</a>
 
-      <a class="btn" href="planning.html">
-        <img src="planning.png" alt="Planning">
-      </a>
+<a class="btn" href="construction.png">
+<img src="informations.png" alt="Informations">
+</a>
 
-      <a class="btn" href="equipes.html">
-        <img src="equipes.png" alt="Équipes">
-      </a>
+<a class="btn" href="planning.html">
+<img src="planning.png" alt="Planning">
+</a>
 
-      <a class="btn" href="construction.png">
-        <img src="book.png" alt="Book">
-      </a>
+<a class="btn" href="equipes.html">
+<img src="equipes.png" alt="Équipes">
+</a>
 
-      <a class="btn" href="construction.png">
-        <img src="galerie.png" alt="Galerie">
-      </a>
+<a class="btn" href="construction.png">
+<img src="book.png" alt="Book">
+</a>
 
-      <a class="btn" href="construction.png">
-        <img src="admin.png" alt="Admin">
-      </a>
+<a class="btn" href="construction.png">
+<img src="galerie.png" alt="Galerie">
+</a>
 
-      <a class="btn" href="construction.png">
-        <img src="gardes postées.png" alt="gardes postées">
-      </a>
+<a class="btn" href="construction.png">
+<img src="admin.png" alt="Admin">
+</a>
 
-      <a class="btn" href="construction.png">
-        <img src="tickets carburant.png" alt="tickets carburants">
-      </a>
+<a class="btn" href="construction.png">
+<img src="gardes postées.png" alt="Gardes postées">
+</a>
 
-      <a class="btn" href="construction.png">
-        <img src="désinfection VSAV.png" alt="désinfection VSAV">
-      </a>
-    </section>
+<a class="btn" href="construction.png">
+<img src="tickets carburant.png" alt="Tickets carburant">
+</a>
 
-  </main>
+<a class="btn" href="construction.png">
+<img src="désinfection VSAV.png" alt="Désinfection VSAV">
+</a>
+
+</section>
+</main>
 </body>
 </html>
