--- a/index.html
+++ b/index.html
@@ -106,10 +106,25 @@ body{
   }
 }
 </style>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
-<main class="wrap">
+<div id="loginBox" style="text-align:center;margin-top:120px;">
+  <div id="g_id_onload"
+       data-client_id="690765229829-9bbdccrsm9dd8c1sj01k06bqsdna3hgs.apps.googleusercontent.com"
+       data-callback="handleCredentialResponse">
+  </div>
+
+  <div class="g_id_signin"
+       data-type="standard"
+       data-size="large"
+       data-theme="outline"
+       data-text="sign_in_with"
+       data-shape="rectangular">
+  </div>
+</div>
+<main class="wrap" style="display:none;">
 
 <img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
 
@@ -165,5 +180,37 @@ body{
 
 </section>
 </main>
+<script>
+function handleCredentialResponse(response) {
+
+ const payload = response.credential.split('.')[1]
+  .replace(/-/g, '+')
+  .replace(/_/g, '/');
+
+const data = JSON.parse(decodeURIComponent(escape(atob(payload))));
+const email = data.email || "";
+
+  console.log("Email connecté :", email);
+
+  // Appel vers ton Apps Script
+  fetch("https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec" + encodeURIComponent(email))
+    .then(res => res.text())
+    .then(txt => {
+      const json = JSON.parse(txt.replace(/^callback\(|\);?$/g, ''));
+
+      if(json.ok){
+        document.getElementById("loginBox").style.display = "none";
+        document.querySelector("main").style.display = "block";
+      } else {
+        alert("Accès refusé");
+      }
+    })
+    .catch(err => {
+      console.error(err);
+      alert("Erreur de connexion");
+    });
+}
+</script>
+
 </body>
 </html>
